Vitamin7_Manifest/k8s/jenkins/jnlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: devops-tools
  labels:
    app: jenkins-server
spec:
  selector:
    app: jenkins-server
  type: ClusterIP
  ports:
    - port: 50000
      targetPort: 50000
      protocol: TCP
      name: jnlp
